ASL index and Github fixes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="project-description">
             <h3>ASLModel</h3>
             <h3>STEELHACKS 2023 - 1st Place Winner</h3>
-            <a href="ASL\index.html">Run the ASLModel</a>
+            <a href="/ProjectsPage/ASL/index.html">Run the ASLModel</a>
             <br><br>
             <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
             <p>Provide a brief description of the project here.</p>
@@ -63,7 +63,7 @@
         <p>Email: loganwcollege@gmail.com</p>
         <p>Phone: +1 (210) 364-9506</p>
         <p><a href="https://www.linkedin.com/in/logan-warren-2232371a8/" target="_blank">LinkedIn</a></p>
-        <p><a href="https://github.com/Logan-Warren" target="_blank">GitHub</a></p>
+        <p><a href="https://github.com/LoganWarren" target="_blank">GitHub</a></p>
     </section>
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
