--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="project-description">
             <h3>ASLModel</h3>
             <h3>STEELHACKS 2023 - 1st Place Winner</h3>
-            <a href="/ProjectsPage/ASL/index.html">Run the ASLModel</a>
+            <a href="/Personal-Website/ProjectsPage/ASL/index.html">Run the ASLModel</a>
 
             <br><br>
             <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
