--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="\index.html">Home</a></li>
+            <a href="../index.html">Home</a>
             <li><a href="\ProjectsPage\project.html">Projects</a></li>
             <li><a href="\Images\Resume - Logan Warren.pdf" download="Resume - Logan Warren" class="download-button">Download PDF</a></li> <!-- Add this line -->
         </ul>
