--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <a href="../index.html">Home</a>
-            <li><a href="\ProjectsPage\project.html">Projects</a></li>
+            <a href="../ProjectsPage/project.html" class="nav-link">Projects</a>
             <li><a href="\Images\Resume - Logan Warren.pdf" download="Resume - Logan Warren" class="download-button">Download PDF</a></li> <!-- Add this line -->
         </ul>
     </nav>
