--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <a href="../index.html">Home</a>
+            <a href="../index.html" class="nav-link" >Home</a>
             <a href="../ProjectsPage/project.html" class="nav-link">Projects</a>
             <li><a href="\Images\Resume - Logan Warren.pdf" download="Resume - Logan Warren" class="download-button">Download PDF</a></li> <!-- Add this line -->
         </ul>
