--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -18,7 +18,7 @@
         <ul>
             <a href="../index.html" class="nav-link" >Home</a>
             <a href="../ProjectsPage/project.html" class="nav-link">Projects</a>
-            <li><a href="\Images\Resume - Logan Warren.pdf" download="Resume - Logan Warren" class="download-button">Download PDF</a></li> <!-- Add this line -->
+            <li><a href="../Images/Resume - Logan Warren.pdf" download="Resume - Logan Warren" class="download-button">Download PDF</a></li> <!-- Add this line -->
         </ul>
     </nav>
     <main>
