--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -129,7 +129,7 @@
     </main>
 </div>
 <aside>
-    <img src="\Images\Tower.PNG">
+    <img src="../Images/Tower.PNG">
 </aside>
 <script>
     document.getElementById('download-pdf').addEventListener('click', () => {
