--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -107,8 +107,8 @@
         <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
         
         <div class="nav-links">
-            <a href="\index.html" class="nav-link">Home</a>
-            <a href="\ProjectsPage\project.html" class="nav-link">Projects</a>
+            <a href="../index.html" class="nav-link">Home</a>
+            <a href="../ProjectsPage/project.html" class="nav-link">Projects</a>
         </div>
     </div>
     <div class="name-section">
@@ -131,10 +131,10 @@
             is essential but not always readily available.</p>
         </div>
         <div class="image-container">
-            <img src="\Images\apbpjgud.bmp" alt="Image 1" width="546" height="350">
+            <img src="../Images/apbpjgud.bmp" alt="Image 1" width="546" height="350">
         </div>
         <div class="image-container">
-            <img src="\Images\asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
+            <img src="../Images/asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
         </div>
         <div class="pattern-paragraph">
             <h2>ASL Model Description</h2>
