--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -131,11 +131,10 @@
             is essential but not always readily available.</p>
         </div>
         <div class="image-container">
-            <img src="../Images/apbpjgud.bmp" alt="Image 1" width="546" height="350">
+            <img src="../Images/apbpjgud.png" alt="Image 1" width="546" height="350">
         </div>
         <div class="image-container">
             <img src="../Images/asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
-            
         </div>
         <div class="pattern-paragraph">
             <h2>ASL Model Description</h2>
