--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -107,8 +107,8 @@
         <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
         
         <div class="nav-links">
-            <a href="../index.html" class="nav-link">Home</a>
-            <a href="../ProjectsPage/project.html" class="nav-link">Projects</a>
+            <a href="/ProjectsPage/ASL/index.html" class="nav-link">Home</a>
+            <a href="/ProjectsPage/project.html" class="nav-link">Projects</a>
         </div>
     </div>
     <div class="name-section">
