--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -38,7 +38,7 @@
                     <h4>Team: Logan Warren, Brayden Nguyen, Xavier Bear, Chris Landingin </h4>
 
                     
-                    <a href="./ASL/index.html">Run the ASLModel </a>
+                    <a href="/ASL/ASLindex.html">Run the ASLModel </a>
                     
                     <br><br>
                     <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
