--- a/ProjectsPage/ASL/ASLindex.html
+++ b/ProjectsPage/ASL/ASLindex.html
@@ -107,7 +107,7 @@
         <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
         
         <div class="nav-links">
-            <a href="../index.html" class="nav-link">Home</a>
+            <a href="/index.html" class="nav-link">Home</a>
             
             <a href="../project.html" class="nav-link">Projects</a>
         </div>
@@ -132,10 +132,10 @@
             is essential but not always readily available.</p>
         </div>
         <div class="image-container">
-            <img src="../Images/apbpjgud.png" alt="Image 1" width="546" height="350">
+            <img src="https://raw.githubusercontent.com/LoganWarren/Personal-Website/main/Images/apbpjgud.png" alt="Image 1" width="546" height="350">
         </div>
         <div class="image-container">
-            <img src="../Images/asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
+            <img src="https://github.com/LoganWarren/Personal-Website/blob/main/Images/asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
         </div>
         <div class="pattern-paragraph">
             <h2>ASL Model Description</h2>
