--- a/ProjectsPage/ASL/ASLindex.html
+++ b/ProjectsPage/ASL/ASLindex.html
@@ -107,7 +107,7 @@
         <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
         
         <div class="nav-links">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="LoganWarren/Personal-Website/index.html" class="nav-link">Home</a>
             
             <a href="../project.html" class="nav-link">Projects</a>
         </div>
