--- a/ProjectsPage/ASL/ASLindex.html
+++ b/ProjectsPage/ASL/ASLindex.html
@@ -107,7 +107,7 @@
         <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
         
         <div class="nav-links">
-            <a href="Personal-Website/main/index.html" class="nav-link">Home</a>            
+            <a href="" class="nav-link">Home</a>            
             <a href="../project.html" class="nav-link">Projects</a>
         </div>
     </div>
