--- a/ProjectsPage/ASL/asl.html
+++ b/ProjectsPage/ASL/asl.html
@@ -115,8 +115,8 @@
         <button id="toggleKeypointsButton">Toggle Keypoints</button>
       </div>
       <div class="nav-container">
-        <a href="\index.html" class="nav-link">Home</a>
-        <a href="\ProjectsPage\project.html" class="nav-link">Projects</a>
+        <a href="/Personal-Website/" class="nav-link">Home</a>
+        <a href="/Personal-Website/ProjectsPage/project.html" class="nav-link">Projects</a>
       </div>
     </div>
       
