--- a/ProjectsPage/ASL/ASLindex.html
+++ b/ProjectsPage/ASL/ASLindex.html
@@ -98,6 +98,8 @@
         .image-container img {
             width: 80%;
             height: auto;
+            max-width: 600px; /* Add a max-width */
+            max-height: 400px; /* Add a max-height */
         }
     </style>
 </head>
