--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -20,14 +20,24 @@
     <main>
         <section class="project-section">
             <div class="project-text">
-                <h1>Current Projects</h1>
                 <div class="project-description">
-                    <p>I am not currently working on any projects</p>
+                    <h1>Current Projects</h1>
+                    <h2>Nooked</h2>
+                    <h4>Team: Logan Warren, Xavier Bear, Emily Durning, Johanna Luke, Delaney Scheidell</h4>
+                   <h2>PyGame - Hackathon</h2>
+                    <h4>Team: Logan Warren, Xavier Bear</h4>
+                    <a href="https://pygames.devpost.com/?ref_content=featured&ref_feature=challenge&ref_medium=portfolio" target="_blank">Devpost</a>
+                    <br>
+                    <br>
+                    <a href="https://github.com/LoganWarren/PyGames-2023" target="_blank">View PyGame on GitHub</a>
+                    
+                    <h2>Personal Website</h2>
                 </div>
             </div>
-            <div class="project-gif">
-                <!-- Remove the <img> tag here -->
-            </div>
+            <div class="Nooked-img">
+                <div class="nooked-img-container"> <!-- Add the new class to a div wrapping the image -->
+                    <img src="../Images/Nooked.PNG" alt="Nooked png"/>
+                </div>
         </section>
         <section class="project-section">
             <div class="project-text">
