--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -32,6 +32,7 @@
                     <a href="https://github.com/LoganWarren/PyGames-2023" target="_blank">View PyGame on GitHub</a>
                     
                     <h2>Personal Website</h2>
+                       <a href="https://loganwarren.github.io/Personal-Website/index.html" target="_blank">Devpost</a>
                 </div>
             </div>
             <div class="Nooked-img">
