--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logan Warren - Projects</title>
     <link rel="stylesheet" href="project.css">
-    <style></style>
 </head>
 <body>
-    <div class="title-bar">
-        <h1 class="main-title">Logan Warren - Projects </h1>
-        
-       <div class="nav-links">
-    <a href="../index.html" class="nav-link">Home</a>
-    <a href="../ResumePage/resume.html" class="nav-link">Resume</a>
-</div>
-
-    </div>
+    <header class="header">
+        <h1 class="main-title">Projects</h1>
+        <nav class="nav-links">
+            <a href="../index.html" class="nav-link">Home</a>
+            <a href="../ResumePage/resume.html" class="nav-link">Resume</a>
+            <a href="../AboutPage/about.html" class="nav-link">About</a>
+        </nav>
+    </header>
     <main>
         <section class="project-section">
             <div class="project-text">
@@ -32,8 +30,6 @@
                     <a href="https://github.com/LoganWarren/PyGames-2023" target="_blank">View PyGame on GitHub</a>
                     
                     <h2>Personal Website</h2>
-                    <a href="https://loganwarren.github.io/Personal-Website/index.html" target="_blank">Home Page</a>
-
                 </div>
             </div>
             <div class="Nooked-img">
