--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logan Warren - Projects</title>
-    <link rel="stylesheet" href="https://github.com/LoganWarren/Personal-Website/blob/a8581b00c8c0a0cf60d15ccc2c2e9ff0c1b7e441/ProjectsPage/project.css">
+    <link rel="stylesheet" href="ProjectsPage/project.css">
 </head>
 <body>
     <header class="header">
