--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -12,7 +12,7 @@
         <nav class="nav-links">
             <a href="../index.html" class="nav-link">Home</a>
             <a href="../ResumePage/resume.html" class="nav-link">Resume</a>
-            <a href="../AboutPage/about.html" class="nav-link">About</a>
+            <a href="../AboutPage/about-me.html" class="nav-link">About</a>
         </nav>
     </header>
     <main>
