--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
     </section>
     <section id="contact" data-aos="fade-up" data-aos-duration="1000">
         <h2>Contact</h2>
-        <p>Email: loganwcollege@gmail.com</p>
-        <p>Phone: +1 (210) 364-9506</p>
-        <p><a href="https://www.linkedin.com/in/logan-warren-2232371a8/" target="_blank">LinkedIn</a></p>
-        <p><a href="https://github.com/LoganWarren" target="_blank">GitHub</a></p>
+        <p>loganwarren@gmail.com</p>
+        <p>(210) 123-4567</p>
+        <a href="https://www.linkedin.com/in/logan-warren-2232371a8/" target="_blank">LinkedIn</a>
+        <br>
+        <a href="https://github.com/LoganWarren" target="_blank" class="github-link">GitHub</a> <!-- Add the class here -->
+        <a href="https://devpost.com/LoganWarren" target="_blank">Devpost</a>
     </section>
     <button id="backToTop" title="Go to top">&uarr;</button>
     <footer>
