--- a/ProjectsPage/ASL/ASLindex.html
+++ b/ProjectsPage/ASL/ASLindex.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +14,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            line-height: 1.6; /* Improved line spacing */
         }
         .title-bar {
             background-color: #000000;
@@ -25,12 +25,14 @@
             position: relative;
         }
         .main-title {
-            font-size: 30px;
-            color:#FFFFFF
+            font-size: 36px; /* Increased title size */
+            color:#FFFFFF;
+            margin-bottom: 10px; /* Added some whitespace */
         }
         .SH-title{
             font-size: 25px;
-            color:#b3b300
+            color:#b3b300;
+            margin-bottom: 10px; /* Added some whitespace */
         }
         .title-container {
             display: flex;
@@ -41,12 +43,26 @@
             display: flex;
             justify-content: center;
             margin-top: 10px;
+            margin-bottom: 20px; /* Added some whitespace */
+        }
+        .nav-link-container {
+            background-color: #383837;
+            border-radius: 4px;
+            padding: 5px 10px;
+            display: flex;
+            justify-content: center;
+        }
+        .nav-link:hover {
+            background-color: #b3b300;
+            color: black;
+            border-radius: 4px;
+            padding: 5px 10px;
         }
         .nav-link {
             color: white;
             text-decoration: none;
-            margin-left: 15px;
             font-size: 15px;
+            padding: 5px 10px;
         }
         .name-section {
             background-color: #383837;
@@ -54,28 +70,35 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            margin-bottom: 20px; /* Added some whitespace */
         }
         .content-section {
-    display: flex;
-    flex-wrap: nowrap; /* Change this to nowrap */
-    justify-content: space-around;
-    padding: 0px;
-    background-color: #5E5E5C;
-    flex: 1;
-}
-.text-section, .image-section {
-    width: 45%;
-}
-.image-container img {
-    display: block; /* Add this line to fix the positioning */
-    width: 100%;
-    height: auto;
-    max-width: 600px;
-    max-height: 400px;
-}
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+            padding: 0px;
+            background-color: #5E5E5C;
+            flex: 1;
+            margin-bottom: 20px; /* Added some whitespace */
+        }
+        .text-section, .image-section {
+            width: 45%;
+        }
+        .image-container img {
+            display: block;
+            width: 100%;
+            height: auto;
+            max-width: 600px;
+            max-height: 400px;
+            border: 2px solid black;
+            border-radius: 10px;
+            margin-top: 30px; /* Adjusted space between the title section and the images */
+        }
         h2 {
             color: #000000;
-            text-align: center; /* Added to center titles */
+            text-align: center;
+            font-size: 24px; /* Increased font size */
+            margin-bottom: 20px; /* Added some whitespace */
         }
         .run-model-button {
             display: block;
@@ -99,17 +122,8 @@
             border: 2px solid #b3b300;
             border-radius: 0px;
             padding: 10px;
+            margin-bottom: 20px; /* Added some whitespace */
         }
-        .image-container img {
-    display: block;
-    width: 100%;
-    height: auto;
-    max-width: 600px;
-    max-height: 400px;
-    border: 2px solid black; /* Add a black border */
-    border-radius: 10px; /* Add rounded corners */
-    margin-top: 70px; /* Add space between the title section and the images */
-}
     </style>
 </head>
 <body>
@@ -118,8 +132,10 @@
             <h1 class="main-title">ASL Model</h1>
             <h2 class="SH-title"> STEELHACKS 2023 First Place Overall Winner</h2>
             <div class="nav-links">
+                <div class="nav-link-container">
                 <a href="/Personal-Website/" class="nav-link">Home</a>
                 <a href="../project.html" class="nav-link">Projects</a>
+                </div>
             </div>
         </div>
     </div>
@@ -155,7 +171,7 @@
                 </p>
             </div>
         </div>
-        <div class="image-section">
+        <div class="image-section">       
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/LoganWarren/Personal-Website/main/Images/apbpjgud.png" alt="Image 1" width="546" height="350">
             </div>
