--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -24,6 +24,7 @@
         <h3>University of Pittsburgh (Currently Pursuing) [2022 - 2026]:</h3>
         <p>Bachelor of Science in Information Science - Concentration in Networking and Security, and a
             Bachelor of Science in Digital Narrative and Interactive Design, with a Minor in Computer Science.</p>
+            <ul><li>Current cumulative GPA: 3.85</li></ul>
         <h3>Smithson Valley High School [2018 - 2022]:</h3>
         <p>Graduated May 2022 - Top 10% - GPA 3.7, National Honor Society</p>
         </div>
@@ -43,8 +44,10 @@
             engineering and designing robots for local commercial use.</li></ul>
     </div>
     <div class="resume-section">
-        <h2>Certifications</h2>
-        <p>Coming Soon!</p>
+        <h2>Licenses/Certifications</h2>
+        <h3>LinkedIn:</h3>
+        <ul><li>Programming Foundations: Databases [2020]</li>
+        <li>Strategic Thinking [2020]</li></ul>
     </div>
     <div class="resume-section">
         <h2>Skills</h2>
