--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -31,17 +31,14 @@
     <div class="resume-section">
         <h2>Experience</h2>
         <h3>Chili's Grill & Bar</h3>
-        <p>Server</p>
-        <ul><li>Managed a section of the restaurant, took orders, and assisted customers
-            and kitchen staff.</li></ul>
+        <p>Server:</p>
+        <ul><li>In my role as a Server at Chili's Grill & Bar, I maintained a customer-oriented approach while managing a section of the restaurant. My responsibilities included taking orders from and interacting with customers. This position demanded strong interpersonal skills and the ability to operate effectively in a fast-paced, team-oriented environment.</li></ul>
         <h3>Cricket Wireless</h3>
-        <p>Sales Associate</p>
-        <ul><li>Promoted products to potential buyers, and provided customer support
-            with setting up phone plans and cellular service needs.</li></ul>
+        <p>Sales Associate:</p>
+        <ul><li>As a Sales Associate at Cricket Wireless, I was responsible for driving sales and enhancing customer satisfaction. I utilized my product knowledge and communication skills to effectively promote a range of telecommunications products to potential buyers. Additionally, I offered comprehensive customer support by assisting clients with setting up phone plans and addressing their cellular service needs.</li></ul>
         <h3>Mekaworks</h3>
         <p>Data Analyst Intern:</p> 
-        <ul><li>I programmed robots for object identification. Assisted the team in
-            engineering and designing robots for local commercial use.</li></ul>
+        <ul><li>As a Data Analyst Intern at Mekaworks, I played a crucial role in developing commercial robotic solutions. This involved programming robots for object identification and contributing to the engineering and design processes. Funded by the Austin Technology Incubator Grant Program through the University of Texas at Austin, my internship provided an opportunity to apply analytical skills in a practical context. It was an enriching experience that enhanced my understanding of data analysis and its applications in the real world.</li></ul>
     </div>
     <div class="resume-section">
         <h2>Licenses/Certifications</h2>
