--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <li><a href="ResumePage\resume.html">Resume</a></li>
         </ul>
     </nav>
-    <div class="flex-container">
+    <div class="flex-container" data-aos="fade-up" data-aos-duration="1000">
         <div class="about-me">
             <h1>Logan Warren</h1>
             <h2>Information Science & Digital Narrative and Interactive Design Student at the University of Pittsburgh</h2>
             <h3>A Brief About Me</h3>
             <div class="about-content">
-                <p>Welcome! I'm Logan Warren, a dual-degree student at the University of Pittsburgh, specializing in Information Science focused in Networking and Security and Digital Narrative & Interactive Design. I've honed my technical skills in various settings such as programming for object identification and exploring front-end development. My expertise spans numerous programming languages, 3D modeling, and cybersecurity. Outside of my educational pursuits, I'm an active participant in hackathons and tech organizations, always eager to innovate and collaborate with fellow tech enthusiasts. Feel free to explore my site, learn more about my journey, and connect with me on LinkedIn and GitHub.</p>
+                <p>Welcome! I'm Logan Warren, a dual-degree student at the University of Pittsburgh, specializing in Information Science focused in Networking and Security and Digital Narrative & Interactive Design, with a minor in Computer Science. I've honed my technical skills in various settings such as programming for object identification and exploring front-end development. My expertise spans numerous programming languages, 3D modeling, and cybersecurity. Outside of my educational pursuits, I'm an active participant in hackathons and tech organizations, always eager to innovate and collaborate with fellow tech enthusiasts. Feel free to explore my site, learn more about my journey, and connect with me on LinkedIn and GitHub.</p>
                 <a href="AboutMePage\about-me.html" class="read-more">Read More About Me</a>
             </div>
         </div>
-        <div class="my-photo">
+        <div class="my-photo" data-aos="fade-up" data-aos-duration="1000">
             <img src="Images\about-image.jpg" alt="About Logan Warren">
         </div>
     </div>    
