--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div id="jWpzXII9InvDM83i" style="width:100%;opacity:1.0;height:100%;">
                                 <div id="OeoWoaTW1TwOkdw8" style="background-color:#141414;transform:scale(1, 1);overflow:hidden;width:100%;position:relative;opacity:1.0;height:100%;">
                                     <div id="wMdPcEdFD4EghqC2" style="transform:rotate(0deg);top:-33.3984375%;left:0%;width:100%;position:absolute;height:133.3984375%;opacity:1.0;animation:pulse 1.5s ease-in-out infinite;">
-                                        <img src="Images/CanvaBackground1.jpg" loading="lazy" srcset="Images/CanvaBackground1.jpg 1200w, Images/CanvaBackground1.jpg 2000w" sizes="(max-width: 375px) 320.5895961vw, (min-width: 375.05px) and (max-width: 480px) 259.54971759vw, (min-width: 480.05px) and (max-width: 768px) 177.05575189vw, (min-width: 768.05px) and (max-width: 1024px) 138.95670573vw, (min-width: 1024.05px) 100vw" style="display:block;object-fit:cover;width:100%;height:100%;">
+                                        <img src="/Personal-Website/Images/CanvaBackground1.jpg" loading="lazy" srcset="/Personal-Website/Images/CanvaBackground1.jpg 1200w, /Personal-Website/Images/CanvaBackground1.jpg 2000w" sizes="(max-width: 375px) 320.5895961vw, (min-width: 375.05px) and (max-width: 480px) 259.54971759vw, (min-width: 480.05px) and (max-width: 768px) 177.05575189vw, (min-width: 768.05px) and (max-width: 1024px) 138.95670573vw, (min-width: 1024.05px) 100vw" style="display:block;object-fit:cover;width:100%;height:100%;">
                                     </div>
                                 </div>
                             </div>
