#home Update index.html

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </label>
                 <ul id="verticalMenu">
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#home">Home</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#home">Home</a>
                     </li>
                     <li class="navMenuLink">
                         <a class="navMenuLinkContent" href="#about-me">About Me</a>
