--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
                 </ul>
                 <ul id="horizontalMenu" style="padding:0;margin:0;">
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#home">Home</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#home">Home</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#about-me">About Me</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#about-me">About Me</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#projects">Projects</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#projects">Projects</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#resume">Resume</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#resume">Resume</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="#contact">Contact</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
