--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </label>
                 <ul id="verticalMenu">
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#home">Home</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#home">Home</a>
                     </li>
                     <li class="navMenuLink">
                         <a class="navMenuLinkContent" href="#about-me">About Me</a>
@@ -248,19 +248,19 @@
                 </ul>
                 <ul id="horizontalMenu" style="padding:0;margin:0;">
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#home">Home</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#home">Home</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#about-me">About Me</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#about-me">About Me</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#projects">Projects</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#projects">Projects</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#resume">Resume</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#resume">Resume</a>
                     </li>
                     <li class="navMenuLink">
-                        <a class="navMenuLinkContent" href="/Personal-Website/index.html/#contact">Contact</a>
+                        <a class="navMenuLinkContent" href="/Personal-Website/#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
