--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                         <div id="EIKPkVlzxUlzWiD7" style="width:100%;opacity:1.0;height:100%;">
                                             <div id="y5P9p6ApXxm07OPF" style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                                                 <div id="bH32Yk1Ia1LCkTN7" style="transform:rotate(0deg);top:0%;left:0%;width:100%;position:absolute;height:100%;opacity:1.0;animation:pulse 1.5s ease-in-out infinite;">
-                                                    <img src="Images/about-image.jpg" loading="lazy" style="display:block;object-fit:cover;width:100%;height:100%;">
+                                                    <img src="/Personal-Website/Images/about-image.jpg" loading="lazy" style="display:block;object-fit:cover;width:100%;height:100%;">
                                                 </div>
                                             </div>
                                         </div>
@@ -394,7 +394,7 @@
                                         <div id="KSMUUnAQosoT5vd5" style="width:100%;opacity:1.0;height:100%;">
                                             <div id="I7jN2Ynw37tWFpDB" style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                                                 <div id="cNfHYleOpfJyycW4" style="transform:rotate(0deg);top:0%;left:0%;width:100%;position:absolute;height:100%;opacity:1.0;animation:pulse 1.5s ease-in-out infinite;">
-                                                    <img src="Images/apbpjgud.png" loading="lazy" srcset="Images/apbpjgud.png 364w, Images/apbpjgud.png 728w" sizes="(max-width: 375px) 55.9368445vw, (min-width: 375.05px) and (max-width: 480px) 57.07841276vw, (min-width: 480.05px) and (max-width: 768px) 49.65842905vw, (min-width: 768.05px) and (max-width: 1024px) 37.24382179vw, (min-width: 1024.05px) 27.9192339vw" style="display:block;object-fit:cover;width:100%;height:100%;">
+                                                    <img src="/Personal-Website/Images/apbpjgud.png" loading="lazy" srcset="/Personal-Website/Images/apbpjgud.png 364w, /Personal-Website/Images/apbpjgud.png 728w" sizes="(max-width: 375px) 55.9368445vw, (min-width: 375.05px) and (max-width: 480px) 57.07841276vw, (min-width: 480.05px) and (max-width: 768px) 49.65842905vw, (min-width: 768.05px) and (max-width: 1024px) 37.24382179vw, (min-width: 1024.05px) 27.9192339vw" style="display:block;object-fit:cover;width:100%;height:100%;">
                                                 </div>
                                             </div>
                                         </div>
@@ -447,7 +447,7 @@
                                         <div id="yU3eUb4Yc08Z4XZE" style="transform:rotate(0deg);width:100%;box-sizing:border-box;height:100%;">
                                             <div id="jydA8KQNTZQPho3q" style="flex-direction:column;display:flex;width:100%;justify-content:flex-start;opacity:1.0;box-sizing:border-box;height:100%;">
                                                 <p id="ImD4mG8U7sBwa3kX" style="color:#ffffff;letter-spacing:0em;font-family:YACgEUaXOJg-0;line-height:1.08361676em;">
-                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="/AboutMePage/about-me.html">More About Me</a></span>
+                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="/Personal-Website/AboutMePage/about-me.html">More About Me</a></span>
                                                     <br>
                                                 </p>
                                             </div>
