--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                                         <div id="yU3eUb4Yc08Z4XZE" style="transform:rotate(0deg);width:100%;box-sizing:border-box;height:100%;">
                                             <div id="jydA8KQNTZQPho3q" style="flex-direction:column;display:flex;width:100%;justify-content:flex-start;opacity:1.0;box-sizing:border-box;height:100%;">
                                                 <p id="ImD4mG8U7sBwa3kX" style="color:#ffffff;letter-spacing:0em;font-family:YACgEUaXOJg-0;line-height:1.08361676em;">
-                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="/AboutMePage/about-me.html">More About Me</a></span>
+                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="/Personal-Website/AboutMePage/about-me.html">More About Me</a></span>
                                                     <br>
                                                 </p>
                                             </div>
