--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <div id="X4b8p9M04iyIOHQn" style="display:grid;position:relative;grid-area:2 / 2 / 3 / 3;">
                                 <div id="QcB0upWHUgJCnYV8" style="z-index:9;">
                                     <div id="Gw3gH4PBKkR1apy9" style="transform:rotate(0deg);width:100%;box-sizing:border-box;height:100%;">
-                                        <a id="pexi28dkeD12sHzX" href="/AboutMePage/about-me.html" style="pointer-events:all;">
+                                        <a id="pexi28dkeD12sHzX" href="/Personal-Website/AboutMePage/about-me.html" style="pointer-events:all;">
                                         <svg id="W8w6A7kpomeJNYJa" viewBox="0 0 335.4735 61.6046" preserveAspectRatio="none" style="overflow:hidden;top:0%;left:0%;background:url(&#x27;&#x27;);width:100%;position:absolute;opacity:1.0;height:100%;">
                                             <g id="alKIdNGr7qBc1NNl" style="transform:scale(1, 1);">
                                                 <path id="rYqkzIisGHuqa1uI" d="M0.0,0.0 L335.47346083507654,0.0 L335.47346083507654,61.60458539711371 L0.0,61.60458539711371 L0.0,0.0" style="fill:#303b53;opacity:1.0;"></path>
@@ -447,7 +447,7 @@
                                         <div id="yU3eUb4Yc08Z4XZE" style="transform:rotate(0deg);width:100%;box-sizing:border-box;height:100%;">
                                             <div id="jydA8KQNTZQPho3q" style="flex-direction:column;display:flex;width:100%;justify-content:flex-start;opacity:1.0;box-sizing:border-box;height:100%;">
                                                 <p id="ImD4mG8U7sBwa3kX" style="color:#ffffff;letter-spacing:0em;font-family:YACgEUaXOJg-0;line-height:1.08361676em;">
-                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="Personal-Website/AboutMePage/about-me.html">More About Me</a></span>
+                                                    <span id="hqLNUaMqN4ux8Ooe" style="color:#ffffff;"><a href="/Personal-Website/AboutMePage/about-me.html">More About Me</a></span>
                                                     <br>
                                                 </p>
                                             </div>
